traductor/generated/JavaSubsetParser.py
# Generated from traductor/grammar/JavaSubset.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JavaSubsetParser ( Parser ):

    grammarFileName = "JavaSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'import'", "'static'", 
                     "'.'", "'*'", "'class'", "'extends'", "'implements'", 
                     "'interface'", "'{'", "'}'", "'void'", "','", "'='", 
                     "'('", "')'", "'public'", "'private'", "'protected'", 
                     "'final'", "'abstract'", "'['", "']'", "'<'", "'>'", 
                     "'boolean'", "'char'", "'byte'", "'short'", "'int'", 
                     "'long'", "'float'", "'double'", "'if'", "'else'", 
                     "'for'", "'while'", "'do'", "'return'", "'break'", 
                     "'continue'", "'throw'", "':'", "'new'", "'++'", "'--'", 
                     "'+'", "'-'", "'!'", "'~'", "'/'", "'%'", "'<<'", "'>>'", 
                     "'>>>'", "'<='", "'>='", "'instanceof'", "'=='", "'!='", 
                     "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'this'", "'super'", 
                     "'true'", "'false'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DECIMAL_LITERAL", "FLOAT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "WS", 
                      "COMMENT", "LINE_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_packageDeclaration = 1
    RULE_importDeclaration = 2
    RULE_typeDeclaration = 3
    RULE_classDeclaration = 4
    RULE_interfaceDeclaration = 5
    RULE_classBody = 6
    RULE_classBodyDeclaration = 7
    RULE_memberDeclaration = 8
    RULE_fieldDeclaration = 9
    RULE_methodDeclaration = 10
    RULE_constructorDeclaration = 11
    RULE_variableDeclarators = 12
    RULE_variableDeclarator = 13
    RULE_variableInitializer = 14
    RULE_arrayInitializer = 15
    RULE_formalParameters = 16
    RULE_formalParameterList = 17
    RULE_formalParameter = 18
    RULE_modifier = 19
    RULE_typeType = 20
    RULE_classOrInterfaceType = 21
    RULE_typeArguments = 22
    RULE_primitiveType = 23
    RULE_typeList = 24
    RULE_block = 25
    RULE_blockStatement = 26
    RULE_localVariableDeclaration = 27
    RULE_statement = 28
    RULE_forControl = 29
    RULE_enhancedForControl = 30
    RULE_forInit = 31
    RULE_expressionList = 32
    RULE_expression = 33
    RULE_primary = 34
    RULE_creator = 35
    RULE_arguments = 36
    RULE_qualifiedName = 37
    RULE_literal = 38

    ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclaration", 
                   "typeDeclaration", "classDeclaration", "interfaceDeclaration", 
                   "classBody", "classBodyDeclaration", "memberDeclaration", 
                   "fieldDeclaration", "methodDeclaration", "constructorDeclaration", 
                   "variableDeclarators", "variableDeclarator", "variableInitializer", 
                   "arrayInitializer", "formalParameters", "formalParameterList", 
                   "formalParameter", "modifier", "typeType", "classOrInterfaceType", 
                   "typeArguments", "primitiveType", "typeList", "block", 
                   "blockStatement", "localVariableDeclaration", "statement", 
                   "forControl", "enhancedForControl", "forInit", "expressionList", 
                   "expression", "primary", "creator", "arguments", "qualifiedName", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    DECIMAL_LITERAL=78
    FLOAT_LITERAL=79
    CHAR_LITERAL=80
    STRING_LITERAL=81
    IDENTIFIER=82
    WS=83
    COMMENT=84
    LINE_COMMENT=85

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JavaSubsetParser.EOF, 0)

        def packageDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.PackageDeclarationContext,0)


        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.ImportDeclarationContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = JavaSubsetParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 78
                self.packageDeclaration()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 81
                self.importDeclaration()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8127636) != 0):
                self.state = 87
                self.typeDeclaration()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(JavaSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(JavaSubsetParser.QualifiedNameContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDeclaration" ):
                return visitor.visitPackageDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def packageDeclaration(self):

        localctx = JavaSubsetParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(JavaSubsetParser.T__0)
            self.state = 96
            self.qualifiedName()
            self.state = 97
            self.match(JavaSubsetParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(JavaSubsetParser.QualifiedNameContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDeclaration" ):
                return visitor.visitImportDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def importDeclaration(self):

        localctx = JavaSubsetParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(JavaSubsetParser.T__2)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 100
                self.match(JavaSubsetParser.T__3)


            self.state = 103
            self.qualifiedName()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 104
                self.match(JavaSubsetParser.T__4)
                self.state = 105
                self.match(JavaSubsetParser.T__5)


            self.state = 108
            self.match(JavaSubsetParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.InterfaceDeclarationContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = JavaSubsetParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDeclaration)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.classDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.interfaceDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(JavaSubsetParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JavaSubsetParser.IDENTIFIER, 0)

        def classBody(self):
            return self.getTypedRuleContext(JavaSubsetParser.ClassBodyContext,0)


        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.ModifierContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.ModifierContext,i)


        def typeType(self):
            return self.getTypedRuleContext(JavaSubsetParser.TypeTypeContext,0)


        def typeList(self):
            return self.getTypedRuleContext(JavaSubsetParser.TypeListContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = JavaSubsetParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8126480) != 0):
                self.state = 115
                self.modifier()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(JavaSubsetParser.T__6)
            self.state = 122
            self.match(JavaSubsetParser.IDENTIFIER)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 123
                self.match(JavaSubsetParser.T__7)
                self.state = 124
                self.typeType()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 127
                self.match(JavaSubsetParser.T__8)
                self.state = 128
                self.typeList()


            self.state = 131
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JavaSubsetParser.IDENTIFIER, 0)

        def classBody(self):
            return self.getTypedRuleContext(JavaSubsetParser.ClassBodyContext,0)


        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.ModifierContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.ModifierContext,i)


        def typeList(self):
            return self.getTypedRuleContext(JavaSubsetParser.TypeListContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_interfaceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDeclaration" ):
                listener.enterInterfaceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDeclaration" ):
                listener.exitInterfaceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceDeclaration" ):
                return visitor.visitInterfaceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def interfaceDeclaration(self):

        localctx = JavaSubsetParser.InterfaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interfaceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8126480) != 0):
                self.state = 133
                self.modifier()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(JavaSubsetParser.T__9)
            self.state = 140
            self.match(JavaSubsetParser.IDENTIFIER)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 141
                self.match(JavaSubsetParser.T__7)
                self.state = 142
                self.typeList()


            self.state = 145
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classBodyDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.ClassBodyDeclarationContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.ClassBodyDeclarationContext,i)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = JavaSubsetParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(JavaSubsetParser.T__10)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34233655316) != 0) or _la==82:
                self.state = 148
                self.classBodyDeclaration()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(JavaSubsetParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.MemberDeclarationContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_classBodyDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBodyDeclaration" ):
                listener.enterClassBodyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBodyDeclaration" ):
                listener.exitClassBodyDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBodyDeclaration" ):
                return visitor.visitClassBodyDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classBodyDeclaration(self):

        localctx = JavaSubsetParser.ClassBodyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classBodyDeclaration)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(JavaSubsetParser.T__1)
                pass
            elif token in [4, 13, 18, 19, 20, 21, 22, 27, 28, 29, 30, 31, 32, 33, 34, 82]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.memberDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.ConstructorDeclarationContext,0)


        def fieldDeclaration(self):
            return self.getTypedRuleContext(JavaSubsetParser.FieldDeclarationContext,0)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_memberDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDeclaration" ):
                listener.enterMemberDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDeclaration" ):
                listener.exitMemberDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDeclaration" ):
                return visitor.visitMemberDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def memberDeclaration(self):

        localctx = JavaSubsetParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_memberDeclaration)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.methodDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.constructorDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.fieldDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(JavaSubsetParser.TypeTypeContext,0)


        def variableDeclarators(self):
            return self.getTypedRuleContext(JavaSubsetParser.VariableDeclaratorsContext,0)


        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaSubsetParser.ModifierContext)
            else:
                return self.getTypedRuleContext(JavaSubsetParser.ModifierContext,i)


        def getRuleIndex(self):
            return JavaSubsetParser.RULE_fieldDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDeclaration" ):
                listener.enterFieldDeclaration(self)
